add_executable(eventloop_test EventLoop_test.cpp)
target_link_libraries(eventloop_test muduo_net)

add_executable(timerqueue_test TimerQueue_unittest.cpp)
target_link_libraries(timerqueue_test muduo_net)

add_executable(runInLoop_test RunInLoop_test.cpp)
target_link_libraries(runInLoop_test muduo_net)

add_executable(eventloopthread_unittest EventLoopThread_unittest.cpp)
target_link_libraries(eventloopthread_unittest muduo_net)

add_executable(acceptor_test Acceptor_test.cpp)
target_link_libraries(acceptor_test muduo_net)